# CMorseRunner

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
scripts/: bump-version.sh
src/: main.cpp
src/audio/: audio_output.cpp  audio_output.hpp  mixers.cpp  mixers.hpp  morse_key.cpp  morse_key.hpp  morse_table.hpp  mov_avg.cpp  mov_avg.hpp  qsb.cpp  qsb.hpp  quick_avg.cpp  quick_avg.hpp  rnd_func.cpp  rnd_func.hpp  snd_types.cpp  snd_types.hpp  volume_ctl.cpp  volume_ctl.hpp  wav_file.cpp  wav_file.hpp
src/core/: call_list.cpp  call_list.hpp  contest.cpp  contest.hpp  dx_oper.cpp  dx_oper.hpp  dx_station.cpp  dx_station.hpp  ini.cpp  ini.hpp  log.cpp  log.hpp  my_station.cpp  my_station.hpp  qrm_stn.cpp  qrm_stn.hpp  qrn_stn.cpp  qrn_stn.hpp  station.cpp  station.hpp  stn_coll.cpp  stn_coll.hpp
src/ui/: main_window.cpp  main_window.hpp  score_dialog.cpp  score_dialog.hpp
